add Color Table
